<resources>
    <string name="app_name">Coin Phone Magic</string>
    <string name="magic_activity_title">Coin</string>
    <string name="objImageViewText">Image of the Object</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="instructions_title">Instructions</string>
    <string name="settings_title">Settings</string>
    <string name="pref_darkness_title">Background Theme</string>
    <string name="pref_darkness_default">Light</string>
    <string name="pref_darkness_summary">Light</string>
    <string name="pref_objType_title">Object Type</string>
    <string name="pref_objType_default">US Quarter</string>
    <string name="pref_objType_summary">US Quarter</string>
    <string name="effectTextViewText">EFFECT</string>
    <string name="secret_and_preparation_textViewText">SECRET AND PREPARATION</string>
    <string name="effect_description_textViewText">A coin or small object appears on the phone. You drag the coin all over the screen. You drag the coin to the edge of the screen. You visibly pull the coin out of the phone. You flip the coin into the air and catch it. You flip the coin again. You catch the coin on the phone with a metal ping sound. The coin has reappeared inside the phone. An amazing effect!</string>
    <string name="secret_and_preparation_description_to_be_writtenTextViewText">This effect has three main secrets.  One, the coin is hidden beneath the phone prior to the effect.  Two, when you drag the coin to the edge of the screen and your finger is about to reach the edge, the image of the coin disappears.  This effect and pulling the real coin out from under the phone, looks like the coin was pulled right out of the phone.  Three, on the second flip of the coin, you do not flip the coin into the air.  You hold the coin back.  Quickly shake the phone to make the coin reappear.  The accelerometer detects the motion and triggers two events.  The first event displays the coin in the center of the screen.  The second event plays a noise to simulate the sound of the coin hitting screen.</string>
    <string name="methodTextViewText">METHOD</string>
    <string name="method_description_textViewText">1.  <b>Click</b> on the <i>settings icon</i> on the top right of the screen \r\n\r\n2.  <b>Decide</b> which <i>object</i> to pull out of the phone \r\n\r\n3.  <b>Decide</b> what <i>sound</i> to use upon reappearance \r\n\r\n4.  <b>Hold</b> the object in your <i>non-dominant hand</i> \r\n\r\n5.  <b>Place</b> the phone in the <i>same hand</i> to conceal the object\r\n\r\n6.  Use your <i>dominant hand thumb</i> to <b>move</b> the object around the screen\r\n\r\n7.  <b>Put</b> your dominant hand <i>index finger</i> on the object under the phone\r\n\r\n8.  In one fluid motion, <b>drag</b> the <i>image object and the actual object</i> off the side of the phone \r\n\r\n9.  <b>Flip</b> the <i>object</i> into the air and catch it \r\n\r\n10.  <b>Fake flip</b> the <i>object</i> into the air using your hold back method of choice <i>(see suggestions below for ideas)</i> \r\n\r\n11.  <b>Trace</b> the imaginary item in the air <i>with your eyes</i> as if it were real \r\n\r\n12.  <b>Shake</b> your phone in the act of <i>\"catching\"</i> the object with the phone \r\n\r\n13.  Simultaneously, <b>ditch</b> the <i>actual</i> object in your location of choice <i>(see suggestions below for ideas)</i></string>
    <string name="comments_TextViewText">COMMENTS AND SUGGESTIONS</string>
    <string name="comments_description_textViewText">1.  Step 10 above mentions hold back methods, consider using <i>standard palm</i> to simulate throwing the object high in the air.  Also, you could use <i>finger</i> palm to simulate a gentle toss of the object.  My method of choice is <i>Tenkai Palm</i> \r\n\r\n2.  Step 13 above mentions your ditch method of choice.  Consider, simply <i>dropping</i> the object in your back pocket<i /> while the spectator is looking at the phone.  Also, if the item is light enough, you could <i>simply drop the item on the floor.</i>  If presenting while seated, consider <i>dropping the item in your lap</i> for future retrieval. \r\n\r\n3. Another consideration.  If the spectator asks you to perform the effect again; consider, not producing the actual object.  Quickly drag the object off the phone.  Hold it up in the air with the backs of your fingers facing the spectator.  Then, freely toss the \"non\" object into the air to produce a coin on the phone once again.  This method allows you to end the performance clean.\r\n\r\n4. If your spectator starts to catch on to the shake event, you can use the delay setting configuration to conceal the method.  Also, consider using the Force Calibration to lessen the amount of force to trigger the effect.  Next, use "setting your phone down on a table" as the accelerometer event to trigger the effect; then, in time with the delay, mime throwing the coin back into the phone without even having a hand on the phone</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_sound_summary">Coins</string>
    <string name="pref_sound_default">Coins</string>
    <string name="calibration_textViewText">CALIBRATION AND ADVANCED SETTINGS</string>
    <string name="calibration_description_textViewText">1. Your phone has <b>accelerometers</b> that detect when you shake the device to make the coin reappear.  Different phones have different accelerometer hardware.  The setting named <i>\"Force Calibration\"</i> allows you to customize how much you must shake the phone to make the coin reappear.\r\n\r\n<b>The higher the number</b> - the harder you must shake the phone\r\n\r\n<b>The lower the number</b> - the less forceful you have to shake the phone\r\n\r\n2. After performing the effect, your spectator might catch on to the shake event triggering the display of the coin.  The setting named <i>\"Delay Calibration\"</i> allows you to have up to a 5 second delay in 1 second increments.  This delay allows you to decouple the shake event from the appearance of the coin.</string>
</resources>
