<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_darkness"
        android:title="@string/pref_darkness_title"
        android:summary="@string/pref_darkness_summary"
        android:dialogTitle="@string/pref_darkness_title"
        android:entries="@array/pref_darkness_entries"
        android:entryValues="@array/pref_darkness_values"
        android:defaultValue="@string/pref_darkness_default" />
    <ListPreference
        android:key="pref_objType"
        android:title="@string/pref_objType_title"
        android:summary="@string/pref_objType_summary"
        android:dialogTitle="@string/pref_objType_title"
        android:entries="@array/pref_objType_entries"
        android:entryValues="@array/pref_objType_values"
        android:defaultValue="@string/pref_objType_default" />
    <ListPreference
        android:key="pref_sound"
        android:title="@string/pref_sound_title"
        android:summary="@string/pref_sound_summary"
        android:dialogTitle="@string/pref_sound_title"
        android:entries="@array/pref_sound_entries"
        android:entryValues="@array/pref_sound_values"
        android:defaultValue="@string/pref_sound_default" />
    <ListPreference
        android:key="pref_shake"
        android:title="Force Calibration"
        android:summary="16"
        android:dialogTitle="Force Calibration"
        android:entries="@array/pref_shake_entries"
        android:entryValues="@array/pref_shake_values"
        android:defaultValue="16" />
</PreferenceScreen>
